# slothful-myles

./: .gitignore  README.md  build.py  metadata.json  metadata.yaml  pyproject.toml
.github/workflows/: deploy.yml  etl.yml
canadian-municipalities/: README.md  canadian-municipalities.csv  scrape.py
data/canada/: README.md  municipalities.csv
etl/: build.py  settings.py
etl/scrapers/: time_of_day.py
etl/scrapers/canada/: municipalities.py
